Compiladores/src/gramatica/MiniJava.java
/* Generated By:JavaCC: Do not edit this line. MiniJava.java */
package gramatica;
import syntaxtree.*;
import visitor.*;

public class MiniJava implements MiniJavaConstants {
  public static void main(String args []) throws ParseException
  {
    System.out.println("Testando");
  }

  static final public TProgram Program() throws ParseException {
  TMainClass mc;
  TClassDeclList cdl;
    mc = MainClass();
    cdl = ClassDeclList();
    {if (true) return new TProgram(mc, cdl);}
    throw new Error("Missing return statement in function");
  }

  static final public TMainClass MainClass() throws ParseException {
  Token id1;
  Token id2;
  TStatement st;
    jj_consume_token(CLASS);
    id1 = jj_consume_token(ID);
    jj_consume_token(LCHAVE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LCOLCHETE);
    jj_consume_token(RCOLCHETE);
    id2 = jj_consume_token(ID);
    jj_consume_token(RPAREN);
    jj_consume_token(LCHAVE);
    st = Statement();
    jj_consume_token(RCHAVE);
    jj_consume_token(RCHAVE);
    {if (true) return new TMainClass(new TIdentifier(id1.image), new TIdentifier(id2.image), st);}
    throw new Error("Missing return statement in function");
  }

  static final public TClassDeclList ClassDeclList() throws ParseException {
  TClassDecl cd;
  TClassDeclList cl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CLASS:
      cd = ClassDecl();
      cl = ClassDeclList();
    cl.addElement(cd);
    {if (true) return cl;}
      break;
    case FIM:
      jj_consume_token(FIM);
    {if (true) return new TClassDeclList();}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public TClassDecl ClassDecl() throws ParseException {
  Token id1;
  TIdentifier cde;
  TVarDeclList vdl;
  TMethodDeclList mdl;
    jj_consume_token(CLASS);
    id1 = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      cde = ClassDeclExtends();
      jj_consume_token(LCHAVE);
      vdl = VarDeclList();
      mdl = MethodDeclList();
      jj_consume_token(RCHAVE);
      {if (true) return new TClassDeclExtends(new TIdentifier(id1.image), cde, vdl, mdl);}
      break;
    case LCHAVE:
      jj_consume_token(LCHAVE);
      vdl = VarDeclList();
      mdl = MethodDeclList();
      jj_consume_token(RCHAVE);
      {if (true) return new TClassDeclSimple(new TIdentifier(id1.image), vdl, mdl);}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public TIdentifier ClassDeclExtends() throws ParseException {
  Token id1;
    jj_consume_token(EXTENDS);
    id1 = jj_consume_token(ID);
    {if (true) return new TIdentifier(id1.image);}
    throw new Error("Missing return statement in function");
  }

  static final public TVarDeclList VarDeclList() throws ParseException {
  TVarDecl vd;
  TVarDeclList vdl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:
      vd = VarDecl();
      vdl = VarDeclList();
    vdl.addElement(vd);
    {if (true) return vdl;}
      break;
    default:
      jj_la1[2] = jj_gen;

    {if (true) return new TVarDeclList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TVarDecl VarDecl() throws ParseException {
  TType ty;
  Token id1;
    ty = Type();
    id1 = jj_consume_token(ID);
    jj_consume_token(PVIRGULA);
    {if (true) return new TVarDecl(ty, new TIdentifier(id1.image));}
    throw new Error("Missing return statement in function");
  }

  static final public TType Type() throws ParseException {
  Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LCOLCHETE:
        jj_consume_token(LCOLCHETE);
        jj_consume_token(RCOLCHETE);
        {if (true) return new TTypeIntegerArray();}
        break;
      default:
        jj_la1[3] = jj_gen;

        {if (true) return new TTypeInteger();}
      }
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
    {if (true) return new TTypeBoolean();}
      break;
    case ID:
      id = jj_consume_token(ID);
    {if (true) return new TTypeIdentifier(id.image);}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public TMethodDeclList MethodDeclList() throws ParseException {
  TMethodDecl md;
  TMethodDeclList mdl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      md = MethodDecl();
      mdl = MethodDeclList();
    mdl.addElement(md);
    {if (true) return mdl;}
      break;
    default:
      jj_la1[5] = jj_gen;

    {if (true) return new TMethodDeclList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TMethodDecl MethodDecl() throws ParseException {
  TType ty;
  Token id1;
  TFormalList fl;
  TExp e;
  TVarDeclList vdl = new TVarDeclList();
  TStatementList sl = new TStatementList();
    jj_consume_token(PUBLIC);
    ty = Type();
    id1 = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LCHAVE);
    VarDeclListMod(vdl, sl);
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(PVIRGULA);
    jj_consume_token(RCHAVE);
    {if (true) return new TMethodDecl(ty, new TIdentifier(id1.image), fl, vdl, sl, e);}
    throw new Error("Missing return statement in function");
  }

  static final public void VarDeclListMod(TVarDeclList vdl, TStatementList sl) throws ParseException {
  Token id1;
  Token id2;
  TExp e2;
  TExp e3;
  TVarDecl vd;
  TStatement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LCOLCHETE:
        jj_consume_token(LCOLCHETE);
        jj_consume_token(RCOLCHETE);
        id1 = jj_consume_token(ID);
        jj_consume_token(PVIRGULA);
      vd = new TVarDecl(new TTypeIntegerArray(), new TIdentifier(id1.image));
      vdl.addElement(vd);
      VarDeclListMod(vdl, sl);
        break;
      case ID:
        id1 = jj_consume_token(ID);
        jj_consume_token(PVIRGULA);
      vd = new TVarDecl(new TTypeInteger(), new TIdentifier(id1.image));
      vdl.addElement(vd);
      VarDeclListMod(vdl, sl);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      id1 = jj_consume_token(ID);
      jj_consume_token(PVIRGULA);
    vd = new TVarDecl(new TTypeBoolean(), new TIdentifier(id1.image));
    vdl.addElement(vd);
    VarDeclListMod(vdl, sl);
      break;
    case ID:
      id1 = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        id2 = jj_consume_token(ID);
        jj_consume_token(PVIRGULA);
      vd = new TVarDecl(new TTypeIdentifier(id1.image), new TIdentifier(id2.image));
      vdl.addElement(vd);
      VarDeclListMod(vdl, sl);
        break;
      case LCOLCHETE:
        jj_consume_token(LCOLCHETE);
        e2 = Exp();
        jj_consume_token(RCOLCHETE);
        jj_consume_token(IGUAL);
        e3 = Exp();
        jj_consume_token(PVIRGULA);
      s = new TStatementArrayAssign(new TIdentifier(id1.image), e2, e3);
        sl = StatementList();
      sl.addElement(s);
        break;
      case IGUAL:
        jj_consume_token(IGUAL);
        e2 = Exp();
        jj_consume_token(PVIRGULA);
      s = new TStatementAssign(new TIdentifier(id1.image), e2);
        sl = StatementList();
      sl.addElement(s);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[8] = jj_gen;

      sl = StatementList();
    }
  }

  static final public TFormal Formal() throws ParseException {
  TType ty;
  Token id1;
    ty = Type();
    id1 = jj_consume_token(ID);
    {if (true) return new TFormal(ty, new TIdentifier(id1.image));}
    throw new Error("Missing return statement in function");
  }

  static final public TFormalList FormalList() throws ParseException {
  TFormal f;
  TFormalList fl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:
      f = Formal();
      fl = FormalRest();
    fl.addElement(f);
    {if (true) return fl;}
      break;
    default:
      jj_la1[9] = jj_gen;

    {if (true) return new TFormalList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TFormalList FormalRest() throws ParseException {
  TFormal f;
  TFormalList fl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRGULA:
      jj_consume_token(VIRGULA);
      f = Formal();
      fl = FormalRest();
    fl.addElement(f);
    {if (true) return fl;}
      break;
    default:
      jj_la1[10] = jj_gen;

    {if (true) return new TFormalList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TStatementList StatementList() throws ParseException {
  TStatement s;
  TStatementList sl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case SOP:
    case LCHAVE:
    case ID:
      s = Statement();
      sl = StatementList();
    sl.addElement(s);
    {if (true) return sl;}
      break;
    default:
      jj_la1[11] = jj_gen;

    {if (true) return new TStatementList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TStatement Statement() throws ParseException {
  int i = 0;
  TStatementList sl;
  TExp e1;
  TExp e2;
  TStatement s1;
  TStatement s2;
  Token id1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
    {if (true) return new TStatementIf(e1, s1, s2);}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
    {if (true) return new TStatementWhile(e1, s1);}
      break;
    case SOP:
      jj_consume_token(SOP);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(PVIRGULA);
    {if (true) return new TStatementPrint(e1);}
      break;
    case ID:
      id1 = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LCOLCHETE:
        jj_consume_token(LCOLCHETE);
        e1 = Exp();
        jj_consume_token(RCOLCHETE);
        jj_consume_token(IGUAL);
        e2 = Exp();
        jj_consume_token(PVIRGULA);
      {if (true) return new TStatementArrayAssign(new TIdentifier(id1.image), e1, e2);}
        break;
      case IGUAL:
        jj_consume_token(IGUAL);
        e2 = Exp();
        jj_consume_token(PVIRGULA);
      {if (true) return new TStatementAssign(new TIdentifier(id1.image), e2);}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case LCHAVE:
      jj_consume_token(LCHAVE);
      sl = StatementList();
      jj_consume_token(RCHAVE);
    {if (true) return new TStatementBlock(sl);}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public TExpList ExpList() throws ParseException {
  TExp e;
  TExpList el;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case LPAREN:
    case EXCL:
    case ID:
    case NUM:
      e = Exp();
      el = ExpRest();
    el.addElement(e);
    {if (true) return el;}
      break;
    default:
      jj_la1[14] = jj_gen;

    {if (true) return new TExpList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TExpList ExpRest() throws ParseException {
  TExp e;
  TExpList el;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRGULA:
      jj_consume_token(VIRGULA);
      e = Exp();
      el = ExpRest();
    el.addElement(e);
    {if (true) return el;}
      break;
    default:
      jj_la1[15] = jj_gen;

    {if (true) return new TExpList();}
    }
    throw new Error("Missing return statement in function");
  }

  static final public TExp Exp() throws ParseException {
  Token id1;
  TExp e1;
  TExp e2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      id1 = jj_consume_token(NUM);
      e1 = new TExpIntegerLiteral(Integer.parseInt(id1.image));
      break;
    case TRUE:
      jj_consume_token(TRUE);
      e1 = new TExpTrue();
      break;
    case FALSE:
      jj_consume_token(FALSE);
      e1 = new TExpFalse();
      break;
    case ID:
      id1 = jj_consume_token(ID);
      e1 = new TExpId(id1.image);
      break;
    case THIS:
      jj_consume_token(THIS);
      e1 = new TExpThis();
      break;
    case NEW:
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        jj_consume_token(LCOLCHETE);
        e2 = Exp();
        jj_consume_token(RCOLCHETE);
        e1 = new TExpNewArray(e2);
        break;
      case ID:
        id1 = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
        e1 = new TExpNewObject(new TIdentifier(id1.image));
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case EXCL:
      jj_consume_token(EXCL);
      e2 = Exp();
      e1 = new TExpNot(e2);
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return ExpAux(e1);}
    throw new Error("Missing return statement in function");
  }

  static final public TExp ExpAux(TExp e1) throws ParseException {
  Token id2;
  TExp e2;
  TExpList el;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUM:
    case SUB:
    case MULTI:
    case LESSTHAN:
    case AND:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUM:
        jj_consume_token(SUM);
        e2 = Exp();
      {if (true) return new TExpOpPlus(e1, e2);}
        break;
      case SUB:
        jj_consume_token(SUB);
        e2 = Exp();
      {if (true) return new TExpOpMinus(e1, e2);}
        break;
      case MULTI:
        jj_consume_token(MULTI);
        e2 = Exp();
      {if (true) return new TExpOpTimes(e1, e2);}
        break;
      case AND:
        jj_consume_token(AND);
        e2 = Exp();
      {if (true) return new TExpOpAnd(e1, e2);}
        break;
      case LESSTHAN:
        jj_consume_token(LESSTHAN);
        e2 = Exp();
      {if (true) return new TExpOpLessThan(e1, e2);}
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case LCOLCHETE:
      jj_consume_token(LCOLCHETE);
      e2 = Exp();
      jj_consume_token(RCOLCHETE);
    {if (true) return new TExpArrayLookup(e1, e2);}
      break;
    case PONTO:
      jj_consume_token(PONTO);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LENGTH:
        jj_consume_token(LENGTH);
      {if (true) return new TExpArrayLength(e1);}
        break;
      case ID:
        id2 = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        el = ExpList();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    {if (true) return new TExpCall(e1, new TIdentifier(id2.image), el);}
      break;
    default:
      jj_la1[20] = jj_gen;

    {if (true) return e1;}
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MiniJavaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[21];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x600,0x80010000,0xc0000,0x0,0xc0000,0x800,0x0,0x0,0xc0000,0xc0000,0x0,0x80d00000,0x0,0x80d00000,0x3e000000,0x0,0x40000,0x3e000000,0x0,0x1000000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x40000,0x2,0x40000,0x0,0x40002,0x40202,0x40000,0x40000,0x10,0x40000,0x202,0x40000,0xc0040,0x10,0x40000,0xc0040,0x1d80,0x40000,0x1d8a,};
   }

  /** Constructor with InputStream. */
  public MiniJava(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MiniJava(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MiniJavaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MiniJava(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MiniJavaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MiniJava(MiniJavaTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MiniJavaTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
